@@ -41,6 +41,7 @@ Additions:
    * Added new APIs elm_transit_tween_mode_facator_set()/get()
    * Support widget orientation mode in order to widgets have multiple styles for each window degree.
    * Add elm_drop_target_add() elm_drop_target_del() and elm_drag_start()
+   * Add the option about sending signals in content_pos_set.
 
 Improvements:
 
